add episode detail editor. temporarily disable thumbnail edit and file upload

--- a/src/app/admin/bangumi-detail/bangumi-basic/bangumi-basic.html
+++ b/src/app/admin/bangumi-detail/bangumi-basic/bangumi-basic.html
@@ -18,12 +18,12 @@
         </div>
         <div class="field">
             <label>放送星期</label>
-            <input type="text" formControlName="air_weekday" name="air_weekday"/>
+            <input type="number" formControlName="air_weekday" name="air_weekday"/>
         </div>
-        <!--<div class="field">-->
-            <!--<label>集数偏移（解决某些集数不是从1开始的新番, bangumi.tv的集数减去资源站的集数）</label>-->
-            <!--<input type="text" formControlName="eps_no_offset" name="eps_no_offset"/>-->
-        <!--</div>-->
+        <div class="field">
+            <label>集数偏移（解决某些集数不是从1开始的新番, bangumi.tv的集数减去资源站的集数）</label>
+            <input type="number" formControlName="eps_no_offset" name="eps_no_offset"/>
+        </div>
         <div class="inline fields">
             <label>状态</label>
             <div class="field">
