--- a/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.html
+++ b/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.html
@@ -1,5 +1,9 @@
 <div class="keyword-builder-container">
     <div class="search-bar">
+        <div class="ui large label">
+            <i class="rss icon"></i>
+            {{siteName}}
+        </div>
         <div class="input-box-wrapper ui left action input" *ngIf="siteName === 'libyk_so'">
             <div class="ui basic dropdown button" uiDropdown="click">
                 <div class="text">{{libykCriteria.t}}</div>
