--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -1,6 +1,6 @@
 <admin-navbar navTitle="编辑新番" backLink="/admin/bangumi">
 </admin-navbar>
-<div class="bangumi-detail-container">
+<div class="bangumi-detail-container" *ngIf="bangumi">
     <div class="bangumi-basic-info">
         <div class="cover-wrapper">
             <img [src]="bangumi.image" alt="image" class="bangumi-image">
@@ -22,6 +22,10 @@
             <p class="entry">
                 <span class="entry-key">放送星期</span>
                 <span class="entry-value">{{bangumi.air_weekday || '未知'}}</span>
+            </p>
+            <p class="entry">
+                <span class="entry-key">集数偏移</span>
+                <span class="entry-value">{{bangumi.eps_no_offset || '0'}}</span>
             </p>
             <p class="entry">
                 <span class="entry-key">状态</span>
@@ -74,19 +78,63 @@
             <!--<span class="entry-value">{{bangumi.dmhy}}</span>-->
         <!--</div>-->
     </div>
-    <div class="bangumi-episodes" *ngIf="bangumi.id">
-        <h4 class="ui header">各话列表</h4>
-        <div class="ui divider"></div>
-        <div class="episode-list">
-            <episode-detail class="episode-item ui segment"
-                            [episode]="episode"
-                            (onDelete)="onEpisodeDelete($event)"
-                            (onAdded)="onEpisodeAdded($event, episode)"
-                            *ngFor="let episode of orderedEpisodeList">
-            </episode-detail>
-        </div>
-        <div class="episode-list-control" *ngIf="bangumi.id">
-            <button class="ui primary button" (click)="addEpisode()" type="button">添加一话</button>
+    <div class="bangumi-episodes">
+        <h4 class="section-header">各话列表</h4>
+        <ul class="notice">
+            <li><span class="ui green horizontal tiny label">&nbsp;</span> = 已下载</li>
+            <li><span class="ui blue horizontal tiny label">&nbsp;</span> = 下载中</li>
+        </ul>
+        <div class="table-wrapper">
+            <table class="ui celled padded table">
+                <thead>
+                <tr>
+                    <th>序号</th>
+                    <th style="width: 7rem;">预览图</th>
+                    <th>标题</th>
+                    <th>放送日期</th>
+                    <th>时长</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let episode of orderedEpisodeList" [ngClass]="{downloaded: episode.status === 2, downloading: episode.status === 1}">
+                    <td>{{episode.episode_no}}</td>
+                    <td>
+                        <div class="image-wrapper" *ngIf="episode.status !== 2">
+                            <div class="image-fallback">
+                                <h4 class="ui icon film icon-holder">
+                                    <i class="film icon"></i>
+                                </h4>
+                            </div>
+                        </div>
+                        <ui-image-placeholder [imageUrl]="episode.thumbnail" *ngIf="episode.status === 2">
+                            <div class="ui-image-fallback">
+                                <div class="ui icon film icon-holder">
+                                    <i class="film icon"></i>
+                                </div>
+                            </div>
+                        </ui-image-placeholder>
+                    </td>
+                    <td class="title">
+                        <span class="key">日文:</span><span class="value">{{episode.name}}</span> <br>
+                        <span class="key">中文:</span><span class="value">{{episode.name_cn}}</span>
+                    </td>
+                    <td>{{episode.airdate}}</td>
+                    <td>{{episode.duration}}</td>
+                    <td>
+                        <a class="anchor-button" (click)="editEpisode(episode)"><i class="edit icon"></i></a>
+                        <!--<a class="anchor-button"><i class="upload icon"></i></a>-->
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
+    <button class="ui circular icon primary button float-action-button" (click)="editEpisode()" type="button"><i class="plus icon"></i></button>
+    <div class="ui inverted dimmer" [ngClass]="{active: isLoading}">
+        <div class="ui large loader"></div>
+    </div>
+</div>
+<div class="initial-placeholder" *ngIf="!bangumi">
+    <div class="placeholder-text">加载中...</div>
 </div>
