--- a/src/app/admin/bangumi-detail/bangumi-detail.less
+++ b/src/app/admin/bangumi-detail/bangumi-detail.less
@@ -16,6 +16,12 @@
     color: #5f94c5;
   }
 }
+
+.section-header {
+  margin: 0;
+  padding: 0 1rem 1rem 1.5rem;
+}
+
 .bangumi-basic-info {
   position: relative;
   display: flex;
@@ -94,10 +100,6 @@
   background-color: #fff;
   box-shadow:  0 0 2px rgba(0, 0, 0, 0.2);
   padding: 1rem 0;
-  .section-header {
-    margin: 0;
-    padding: 0 1rem 1rem 1.5rem;
-  }
   .entry {
     position: relative;
     margin: 0 0 0.8em 0;
@@ -127,97 +129,105 @@
     }
   }
 }
+.bangumi-episodes {
+  position: relative;
+  margin: 1rem 1rem 6rem 1rem;
+  background-color: #fff;
+  box-shadow:  0 0 2px rgba(0, 0, 0, 0.2);
+  padding: 1rem 0;
+  .notice {
+    margin: 0 2rem 2rem 1.5rem;
+    padding: 0;
+    display: inline-block;
+    list-style: none;
+    > li {
+      display: inline-block;
+      margin-right: 2rem;
+    }
+  }
+  .table-wrapper {
+    width: 100%;
+    padding: 0 0.5rem;
+  }
+  .ui.table {
+    //border-radius: 0;
+    //tr:first-child {
+    //  > th:first-child {
+    //    border-radius: 0;
+    //  }
+    //  > th:last-child {
+    //    border-radius: 0;
+    //  }
+    //}
+    td.title {
+      > .key {
+        color: #828574;
+        padding-right: 0.5rem;
+      }
+    }
+    tr.downloaded {
+      background: #fafff4 !important;
+      color: #2c6620 !important;
+    }
+    tr.downloading {
+      background: #e8f0ff !important;
+      color: #225d73 !important;
+    }
+  }
+  .image-wrapper {
+    display: table;
+    position: relative;
+    width: 6rem;
+    height: 3.375rem;
+  }
 
-.episode-list {
-  .episode-item {
+  .image-fallback{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
     align-items: center;
-    > .episode-status-label {
-      position: absolute;
-      top: 1rem;
-      left: -1.2em;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #cfcfcf;
+    color: #868686;
+    .icon-holder {
+      font-size: 0.8rem;
     }
-    > .episode-no-wrapper {
-      width: 5em;
-      min-height: 3em;
-      flex: 0 1 auto;
-      > .episode-no {
-        margin: 0;
-        color: #999999;
-      }
-    }
-    .episode-thumbnail {
-      width: 20rem;
-      margin-right: 1.5em;
-      .no-image {
-        .image-wrapper {
-          position: relative;
-          width: 100%;
-          height: 11.25rem;
-        }
-
-        .image-fallback{
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: #cfcfcf;
-          color: #868686;
-          .icon-holder {
-            font-size: 2rem;
-          }
-        }
-      }
-
-      .thumbnail-image {
-        width: 100%;
-        height: 11.25rem;
-      }
-      .edit-button {
-        cursor: pointer;
-      }
-      .thumbnail-editor {
-        width: 100%;
-        height: 11.25rem;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: stretch;
-        .close-button {
-          align-self: flex-start;
-          order: 1;
-          position: absolute;
-          right: 0;
-          top: 0;
-        }
-        .action.input {
-          order: 2;
-        }
-      }
-    }
-    > .content {
-      flex: 1 1 auto;
-
-      .right-aligned.button {
-        position: absolute;
-        right: 0;
-        bottom: 1em;
-      }
-    }
+  }
+  .anchor-button {
+    padding: 0.4em;
   }
 }
 
-.episode-list-control {
-  margin: 1rem 0;
+.float-action-button.ui.primary.button {
+  font-size: 1.4rem;
+  position: fixed;
+  bottom: 3rem;
+  right: 4rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.45);
+  z-index: 1000;
 }
 
-.slider-container {
-  width: 100%;
+.initial-placeholder {
+  position: fixed;
+  top: 4.8rem;
+  left: 260px;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+  background-color: #f0f0f0;
+  .placeholder-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    font-size: 2rem;
+    width: 6em;
+    height: 1em;
+    color: #9f9f9f;
+  }
 }
