--- a/src/app/admin/bangumi-detail/episode-thumbnail/episode-thumbnail.html
+++ b/src/app/admin/bangumi-detail/episode-thumbnail/episode-thumbnail.html
@@ -1,42 +1,16 @@
-<!-- Episode.STATUS_DOWNLOADED = 2 -->
-<ui-dimmer *ngIf="!editorOpen && episode.status === 2">
-  <ui-image-placeholder [imageUrl]="episode.thumbnail" class="thumbnail-image ui-dimmer-content">
-    <div class="ui-image-fallback">
-      <div class="ui icon film">
-        <i class="film icon"></i>
-      </div>
-    </div>
-  </ui-image-placeholder>
-  <!--<img [src]="episode.thumbnail" alt="no image" class="thumbnail-image ui-dimmer-content">-->
-  <div class="ui simple dimmer">
-    <div class="content">
-      <div class="center">
-        <h4 class="ui inverted icon edit edit-button" (click)="openEditor()">
-          <i class="edit icon"></i>
-          修改预览图
-        </h4>
-      </div>
-    </div>
-  </div>
-</ui-dimmer>
-<div class="thumbnail-editor" *ngIf="editorOpen && episode.status === 2">
-  <div class="ui fluid action input" *ngIf="!episode.duration">
-    <input type="text" placeholder="format: 00:00:20.000" [(ngModel)]="time">
-    <div [ngClass]="{loading: isSaving}" class="ui button" (click)="updateThumbnail()">Update</div>
-  </div>
-  <div class="slider-container" *ngIf="episode.duration">
-    <ui-slider (release)="updateThumbnail($event)"></ui-slider>
-  </div>
-  <div class="close-button circular ui icon button" (click)="closeEditor()">
-    <i class="icon remove"></i>
-  </div>
-</div>
-<div class="no-image" *ngIf="episode.status !== 2">
-  <div class="image-wrapper">
-    <div class="image-fallback">
-      <h4 class="ui icon film icon-holder">
-        <i class="film icon"></i>
-      </h4>
-    </div>
-  </div>
+<div class="episode-thumbnail-modal">
+    <ui-image-placeholder [imageUrl]="episode.thumbnail" class="thumbnail-image ui-dimmer-content">
+        <div class="ui-image-fallback">
+            <div class="ui icon film">
+                <i class="film icon"></i>
+            </div>
+        </div>
+    </ui-image-placeholder>
+    <form class="thumbnail-editor" [formGrou]="">
+        <div class="fields">
+            <div class="field">
+                <label>Hour</label>
+            </div>
+        </div>
+    </form>
 </div>
