replace select with uiDropdown

--- a/src/app/admin/admin-navbar/admin-navbar.less
+++ b/src/app/admin/admin-navbar/admin-navbar.less
@@ -50,6 +50,11 @@
     margin-right: 3rem;
     > .accessory-action {
       margin: 0 0.5rem;
+      &.ui.inline.dropdown {
+        > .text {
+          font-weight: normal;
+        }
+      }
     }
   }
 }
