--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -9,18 +9,24 @@
     <a class="sort-button anchor-button accessory-action" (click)="onOrderChange(orderBy, true)" [title]="sort === 'desc' ? '降序': '升序'">
         <i class="sort content icon" [ngClass]="{ascending: sort === 'asc', descending: sort === 'desc'}"></i>
     </a>
-    <select class="accessory-action" name="admin_orderBy" id="admin_orderBy" data-value="create_time" #orderByPicker
-            (change)="onOrderChange(orderByPicker.value, false)">
-        <option value="create_time">按创建时间</option>
-        <option value="update_time">按修改时间</option>
-        <option value="air_date">按开播日期</option>
-    </select>
-    <select class="accessory-action" name="admin_type" id="admin_type" value="-1" #typePicker
-            (change)="onTypeChange(typePicker.value)">
-        <option value="-1">全部</option>
-        <option value="2">动画</option>
-        <option value="6">电视剧</option>
-    </select>
+    <div class="accessory-action ui inline dropdown" uiDropdown="click">
+        <div class="text">{{orderByMenuLabel[orderBy]}}</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+            <div class="item" (click)="onOrderChange('create_time', false)">按创建时间</div>
+            <div class="item" (click)="onOrderChange('update_time', false)">按修改时间</div>
+            <div class="item" (click)="onOrderChange('air_date', false)">按开播日期</div>
+        </div>
+    </div>
+    <div class="accessory-action ui inline dropdown" uiDropdown="click">
+        <div class="text">{{typeMenuLabel[type]}}</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+            <div class="item" (click)="onTypeChange(-1)">全部</div>
+            <div class="item" (click)="onTypeChange(2)">动画</div>
+            <div class="item" (click)="onTypeChange(6)">电视剧</div>
+        </div>
+    </div>
 </admin-navbar>
 <div class="content-area">
     <div class="all-bangumi-container" *ngIf="!name && !isLoading && bangumiList && bangumiList.length > 0">
