--- a/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.html
+++ b/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.html
@@ -9,41 +9,68 @@
         </div>
         <div class="selected-tag">
             <div class="ui label" *ngFor="let tag of selectedTags">
-                {{tag.locale.zh_cn}}
-                <a class="detail"><i class="delete icon"></i></a>
+                {{tag.locale.zh_cn || tag.name}}
+                <a class="detail" (click)="removeTag(tag)"><i class="delete icon"></i></a>
             </div>
         </div>
     </div>
-    <div class="tag-search-result">
+    <div class="tag-container">
+        <div class="tag-search-result">
+            <a class="ui label" *ngFor="let tag of searchResultTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="format-tags">
+            <a class="ui label" *ngFor="let tag of formatTags" (click)="selectTag(tag)">
+                {{tag.name}}
+            </a>
+        </div>
+        <div class="lang-tags">
+            <a class="ui label" *ngFor="let tag of langTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="misc-tags">
+            <a class="ui label" *ngFor="let tag of miscTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="category-tags">
+            <a class="ui label" *ngFor="let tag of categoryTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="popular-team-tags">
+            <a class="ui label" *ngFor="let tag of popularTeamTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="popular-bangumi-tags">
+            <a class="ui label" *ngFor="let tag of popularBangumiTags" (click)="selectTag(tag)">
+                {{tag.locale.zh_cn || tag.name}}
+            </a>
+        </div>
+        <div class="torrent-result">
+            <table class="ui table">
+                <thead>
+                <tr>
+                    <th>标题</th>
+                    <th>话数</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let torrent of torrentList">
+                    <td>{{torrent.title}}</td>
+                    <td>
+                        <span class="ui label" *ngFor="let eps_no of torrent.eps_no_list">{{eps_no}}</span>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="format-tags">
-        <a class="ui label" *ngFor="let tag of formatTags">
-            {{tag.name}}
-        </a>
-    </div>
-    <div class="lang-tags">
-        <a class="ui label" *ngFor="let tag of langTags">
-            {{tag.locale.zh_cn || tag.name}}
-        </a>
-    </div>
-    <div class="misc-tags">
-        <a class="ui label" *ngFor="let tag of miscTags">
-            {{tag.locale.zh_cn || tag.name}}
-        </a>
-    </div>
-    <div class="category-tags">
-        <a class="ui label" *ngFor="let tag of categoryTags">
-            {{tag.locale.zh_cn || tag.name}}
-        </a>
-    </div>
-    <div class="popular-team-tags">
-        <a class="ui label" *ngFor="let tag of popularTeamTags">
-            {{tag.locale.zh_cn || tag.name}}
-        </a>
-    </div>
-    <div class="popular-bangumi-tags">
-        <a class="ui label" *ngFor="let tag of popularBangumiTags">
-            {{tag.locale.zh_cn || tag.name}}
-        </a>
+    <div class="footer">
+        <button class="ui button" (click)="cancel()">取消</button>
+        <button class="ui primary button" (click)="save()">保存</button>
     </div>
 </div>
