--- a/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.less
+++ b/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.less
@@ -51,3 +51,28 @@
     margin: 0 1rem 0 0;
   }
 }
+
+.tag-container {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 1.6rem;
+  background-color: #fff;
+  > .ui.button {
+    margin-right: 2rem;
+  }
+}
