--- a/src/app/admin/bangumi-detail/bangumi-detail.less
+++ b/src/app/admin/bangumi-detail/bangumi-detail.less
@@ -55,6 +55,12 @@
       margin: 0 3rem 1rem 1.5rem;
       white-space: normal;
       word-break: break-all;
+      .external-link {
+        display: inline-block;
+        margin-left: 1.5rem;
+        font-size: 0.8em;
+        color: #818181;
+      }
     }
     h4.entry {
       margin: 0 0 0.6rem 0;
@@ -106,7 +112,7 @@
     font-size: 1.5rem;
     line-height: 1.14285714em;
     .entry-key {
-      width: 7em;
+      width: 9em;
       display: block;
       position: absolute;
       top: 0.25rem;
@@ -118,7 +124,7 @@
     }
     .entry-value {
       display: block;
-      padding-left: 8em;
+      padding-left: 9em;
       width: 100%;
       white-space: normal;
       word-break: break-all;
