--- a/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.less
+++ b/src/app/admin/bangumi-detail/bangumi-moe-builder/bangumi-moe-builder.less
@@ -76,3 +76,36 @@
     margin-right: 2rem;
   }
 }
+
+.tag-search-result {
+  padding: 1rem;
+  > .tag-search-header {
+    color: #9f9f9f;
+    display: inline-block;
+  }
+}
+
+.selected-tag {
+  margin-left: 1.5rem;
+}
+
+.tag-list {
+  padding: 0 1rem 0.2rem 1rem;
+  > .tag-list-header {
+    display: block;
+    padding: 0.2rem 0.5rem 0.4rem 0.5rem;
+    font-size: 0.8rem;
+    color: #9f9f9f;
+    border-bottom: 1px solid #cccccc;
+    margin: 0 0.2rem 0.4rem 0.2rem;
+  }
+
+  > .ui.label {
+    margin-bottom: 0.5rem;
+  }
+  .loading-tips {
+    font-size: 1rem;
+    padding-left: 1rem;
+    color: #4c4c4c;
+  }
+}
