--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -1,4 +1,12 @@
 <admin-navbar navTitle="编辑新番" backLink="/admin/bangumi">
+    <a class="accessory-action anchor-button"
+       title="删除番組"
+       confirmDialog
+       dialogTitle="确定删除番組么"
+       dialogContent="删除该番組将删除与之有关的所有视频文件，torrent，用户收藏，观看进度等信息"
+       (onConfirm)="deleteBangumi()">
+        <i class="trash icon"></i>
+    </a>
 </admin-navbar>
 <div class="bangumi-detail-container" *ngIf="bangumi">
     <div class="bangumi-basic-info">
@@ -53,6 +61,15 @@
     </div>
     <div class="download-info">
         <h4 class="section-header">抓取来源</h4>
+        <div class="bangumi-moe-entry entry">
+            <div class="entry-key">BANGUMI.MOE</div>
+            <div class="entry-value">
+                <div class="ui horizontal label" *ngFor="let tag of bangumi.bangumi_moe | bangumiMoe">
+                    {{tag.locale.zh_cn || tag.name}}
+                </div>
+                <a class="edit-button anchor-button" (click)="editBangumiMoe()"><i class="edit icon"></i></a>
+            </div>
+        </div>
         <div class="dmhy-entry entry">
             <div class="entry-key">DMHY</div>
             <div class="entry-value">
@@ -76,15 +93,6 @@
                     <div class="detail">{{bangumi.libyk_so | libykFormat:'q'}}</div>
                 </div>
                 <a class="edit-button anchor-button" (click)="editKeyword('libyk_so')"><i class="edit icon"></i></a>
-            </div>
-        </div>
-        <div class="bangumi-moe-entry entry">
-            <div class="entry-key">BANGUMI.MOE</div>
-            <div class="entry-value">
-                <div class="ui horizontal label" *ngFor="let tag of bangumi.bangumi_moe | bangumiMoe">
-                    {{tag.locale.zh_cn || tag.name}}
-                </div>
-                <a class="edit-button anchor-button" (click)="editBangumiMoe()"><i class="edit icon"></i></a>
             </div>
         </div>
     </div>
@@ -133,7 +141,11 @@
                     <td>{{episode.duration}}</td>
                     <td>
                         <a class="anchor-button" (click)="editEpisode(episode)"><i class="edit icon"></i></a>
-                        <!--<a class="anchor-button"><i class="upload icon"></i></a>-->
+                        <a class="anchor-button"
+                           confirmDialog
+                           dialogTitle="确定删除该话么"
+                           dialogContent="删除该话将会同时删除与该话有关的torrent信息，文件，用户进度信息"
+                           (onConfirm)="deleteEpisode(episode.id)"><i class="remove icon"></i></a>
                     </td>
                 </tr>
                 </tbody>
