--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -9,6 +9,9 @@
         <a class="item" [routerLink]="['/admin/user']">
             用户管理
         </a>
+        <a class="item" [routerLink]="['/admin/task']">
+            任务管理
+        </a>
     </aside>
     <router-outlet></router-outlet>
 </div>
