add pagination-container to hide pagination when total is less than count.

--- a/src/app/admin/user-manager/user-manager.html
+++ b/src/app/admin/user-manager/user-manager.html
@@ -22,7 +22,9 @@
             </tr>
             </tbody>
         </table>
-        <ui-pagination [currentPage]="userPage" [total]="userTotal" [countPerPage]="userCount" [max]="6" (pageChange)="getUserList($event)"></ui-pagination>
+        <div class="pagination-container" *ngIf="userTotal > userCount">
+            <ui-pagination [currentPage]="userPage" [total]="userTotal" [countPerPage]="userCount" [max]="6" (pageChange)="getUserList($event)"></ui-pagination>
+        </div>
     </div>
     <div class="ui segment">
         <h4>未使用的邀请码</h4>
