--- a/src/app/admin/user-manager/user-manager.less
+++ b/src/app/admin/user-manager/user-manager.less
@@ -10,6 +10,11 @@
   background-color: #f0f0f0;
 }
 
+.pagination-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 .anchor-button {
   cursor: pointer;
