--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -11,7 +11,7 @@
 <div class="bangumi-detail-container" *ngIf="bangumi">
     <div class="bangumi-basic-info">
         <div class="cover-wrapper">
-            <img [src]="bangumi.image" alt="image" class="bangumi-image">
+            <img [src]="bangumi.cover" alt="image" class="bangumi-image">
         </div>
         <div class="bangumi-info-text">
             <h3 class="bangumi-title">
