--- a/src/app/home/bangumi-list/bangumi-list.less
+++ b/src/app/home/bangumi-list/bangumi-list.less
@@ -1,21 +1,85 @@
-.bangumi-list-container {
-  padding-top: 2rem;
+:host {
+  position: fixed;
+  top: 3.5rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 
-  .bangumi-segment {
-    color: inherit;
-  }
-
-  .bangumi-info {
-    .summary {
-      margin-bottom: 1rem;
-    }
+:host-context(.home-content.sidebar-active) {
+  position: fixed;
+  top: 3.5rem;
+  left: 15rem;
+  right: 0;
+  bottom: 0;
+  @media (max-width: 1330px) {
+    left: 0;
   }
 }
 
-.load-more-indicator {
-  margin-top: 2rem;
-  margin-bottom: 3rem;
-  .button.hide {
-    visibility: hidden;
+.anchor-button {
+  cursor: pointer;
+  color: #333333;
+  &:hover,
+  &:focus {
+    color: #4f7ba4
+  }
+}
+
+.bangumi-list-container {
+  padding-bottom: 1rem;
+  padding-top: 4rem;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  .filter-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+    font-size: 1rem;
+    padding: 1rem 4rem 1rem 0;
+    text-align: right;
+    .sort-button {
+      margin-right: 1rem;
+    }
+    .ui.dropdown {
+      margin-right: 1.5rem;
+      cursor: pointer;
+      > .text {
+        font-weight: normal;
+      }
+      &:hover,
+      &:focus {
+        color: #4f7ba4
+      }
+    }
+  }
+  .timeline-container {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.search-result {
+  width: 100%;
+  height: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #f0f0f0;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.loading-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  background-color: #f0f0f0;
+  .loader {
+    color: #9f9f9f;
   }
 }
