fix bug in bangumi-card when using as a non-infinite-list children fix style bugs in bangumi-detail

--- a/src/app/home/bangumi-card/bangumi-card.html
+++ b/src/app/home/bangumi-card/bangumi-card.html
@@ -1,7 +1,7 @@
 <div class="ui container">
     <div class="ui segment" (click)="jumpTo(bangumi.id)">
         <div class="bangumi-list-item">
-            <div class="cover-wrapper" #imageWrapper>
+            <div class="cover-wrapper">
                 <img src="" alt="image" class="bangumi-image" #image>
             </div>
             <div class="list-item-text">
