add bgm link on bangumi-detail update copyright mark

--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -44,6 +44,12 @@
       margin: 0;
       &.name-cn {
         margin-bottom: 1.2rem;
+        .external-link {
+          display: inline-block;
+          margin-left: 1.5rem;
+          font-size: 0.8em;
+          color: #818181;
+        }
       }
       &.name {
         color: #696969;
