--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -1,74 +1,79 @@
 <div class="ui active inverted dimmer loading-wrapper" *ngIf="!bangumi">
-  <div class="ui medium loader"></div>
+    <div class="ui medium loader"></div>
 </div>
 <div class="ui container bangumi-default-container" *ngIf="bangumi">
-  <div class="bangumi-info">
-    <div #bangumiCover class="bangumi-cover" *ngIf="bangumi.cover">
-      <ui-image-placeholder [imageUrl]="bangumi.cover">
-        <div class="ui-image-fallback">
-          <h4 class="ui icon film icon-holder">
-            <i class="film icon"></i>
-          </h4>
+    <div class="bangumi-info">
+        <div #bangumiCover class="bangumi-cover" *ngIf="bangumi.cover">
+            <ui-image-placeholder [imageUrl]="bangumi.cover">
+                <div class="ui-image-fallback">
+                    <h4 class="ui icon film icon-holder">
+                        <i class="film icon"></i>
+                    </h4>
+                </div>
+            </ui-image-placeholder>
         </div>
-      </ui-image-placeholder>
-    </div>
-    <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
-    </div>
-    <div #bangumiInfo class="bangumi-base-info">
-      <h2 class="bangumi-title name-cn">
-        {{bangumi.name_cn}}
-      </h2>
-      <h3 class="bangumi-title name">
-        <span class="tip">日文名:</span><span class="name-text">{{bangumi.name}}</span>
-      </h3>
-      <favorite-chooser [bangumi]="bangumi"></favorite-chooser>
-      <div class="summary facade-item">
-        {{bangumi.summary}}
-      </div>
-      <div class="air-date facade-item">
-        {{bangumi.air_date}}
-      </div>
-      <div class="air-weekday facade-item">
-        {{bangumi.air_weekday | weekday}}
-      </div>
-    </div>
-  </div>
-  <div class="episode-list">
-    <h4 class="episode-list-heading">各话列表</h4>
-    <div class="ui divider"></div>
-    <div class="ui six doubling cards">
-      <div class="card episode-card" *ngFor="let episode of bangumi.episodes">
-        <div class="image" *ngIf="episode.status!==2">
-          <div class="image-wrapper">
-            <div class="image-fallback">
-              <h4 class="ui icon film icon-holder">
-                <i class="film icon"></i>
-              </h4>
+        <div class="bangumi-cover-revealer" [style.height]="coverRevealerHeight" (click)="toggleCover()">
+        </div>
+        <div #bangumiInfo class="bangumi-base-info">
+            <h2 class="bangumi-title name-cn">
+                {{bangumi.name_cn}}
+                <a class="external-link" [href]="'https://bgm.tv/subject/' + bangumi.bgm_id" target="_blank"
+                   title="在bgm.tv页面查看">
+                    <i class="external icon"></i>
+                </a>
+            </h2>
+            <h3 class="bangumi-title name">
+                <span class="tip">日文名:</span><span class="name-text">{{bangumi.name}}</span>
+            </h3>
+            <favorite-chooser [bangumi]="bangumi"></favorite-chooser>
+            <div class="summary facade-item">
+                {{bangumi.summary}}
             </div>
-          </div>
+            <div class="air-date facade-item">
+                {{bangumi.air_date}}
+            </div>
+            <div class="air-weekday facade-item">
+                {{bangumi.air_weekday | weekday}}
+            </div>
         </div>
-        <div *ngIf="episode.status!==2" class="content unfinished">
-          <span>第{{episode.episode_no}}话</span>
-        </div>
-        <a *ngIf="episode.status===2" class="image" [routerLink]="['/play', episode.id]">
+    </div>
+    <div class="episode-list">
+        <h4 class="episode-list-heading">各话列表</h4>
+        <div class="ui divider"></div>
+        <div class="ui six doubling cards">
+            <div class="card episode-card" *ngFor="let episode of bangumi.episodes">
+                <div class="image" *ngIf="episode.status!==2">
+                    <div class="image-wrapper">
+                        <div class="image-fallback">
+                            <h4 class="ui icon film icon-holder">
+                                <i class="film icon"></i>
+                            </h4>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="episode.status!==2" class="content unfinished">
+                    <span>第{{episode.episode_no}}话</span>
+                </div>
+                <a *ngIf="episode.status===2" class="image" [routerLink]="['/play', episode.id]">
           <span class="image-wrapper">
               <img [src]="episode.thumbnail" alt="image">
           </span>
-        </a>
-        <a *ngIf="episode.status===2" class="content" [routerLink]="['/play', episode.id]">
-          <span>第{{episode.episode_no}}话</span>
-        </a>
-        <div class="ui bottom attached progress" *ngIf="episode.watch_progress && episode.watch_progress.percentage"
-             [ngClass]="{
-             orange: episode.watch_progress.watch_status === 1,
-             olive: episode.watch_progress.watch_status === 2,
-             blue: episode.watch_progress.watch_status === 3,
-             brown: episode.watch_progress.watch_status === 4,
-             grey: episode.watch_progress.watch_status === 5
-             }">
-          <div class="bar" [style.width]="episode.watch_progress.percentage * 100 + '%'"></div>
+                </a>
+                <a *ngIf="episode.status===2" class="content" [routerLink]="['/play', episode.id]">
+                    <span>第{{episode.episode_no}}话</span>
+                </a>
+                <div class="ui bottom attached progress"
+                     *ngIf="episode.watch_progress && episode.watch_progress.percentage"
+                     [ngClass]="{
+                     orange: episode.watch_progress.watch_status === 1,
+                     olive: episode.watch_progress.watch_status === 2,
+                     blue: episode.watch_progress.watch_status === 3,
+                     brown: episode.watch_progress.watch_status === 4,
+                     grey: episode.watch_progress.watch_status === 5
+                     }">
+                    <div class="bar" [style.width]="episode.watch_progress.percentage * 100 + '%'"></div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
