--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -47,6 +47,6 @@
 </main>
 
 <footer id="page-footer" [ngClass]="currentRouteName + (sidebarActive ? ' sidebar-active': '')" *ngIf="currentRouteName !== 'Bangumi'">
-  <div class="copyright-content">&copy;2016 Nyasoft, All rights reserved.</div>
+  <div class="copyright-content">&copy;2016 - 2017 Nyasoft, All rights reserved.</div>
   <div class="credits">Powered By <a target="_blank" href="https://github.com/lordfriend/Albireo">Albireo</a></div>
 </footer>
