add email field in register

--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -18,6 +18,9 @@
             <input type="password" formControlName="password_repeat" placeholder="重复密码">
           </div>
           <div class="ui field">
+            <input type="text" formControlName="email" placeholder="Email">
+          </div>
+          <div class="ui field">
             <input type="text" formControlName="invite_code" placeholder="邀请码">
           </div>
           <div>
