--- a/src/app/email-confirm/email-confirm.html
+++ b/src/app/email-confirm/email-confirm.html
@@ -1,3 +1,12 @@
 <div class="email-confirm">
-
+    <div class="loading" *ngIf="isLoading">
+        <p>Just wait a little moment...</p>
+    </div>
+    <div class="confirmed" *ngIf="!isLoading && emailValid">
+        <p>Congratulations! You have completed email address confirmation.</p>
+        <p><button class="ui button" (click)="returnToHome()">Click To Return</button></p>
+    </div>
+    <div class="failed" *ngIf="!isLoading && emailValid">
+        <p>Something went wrong!</p>
+    </div>
 </div>
