--- a/src/app/home/user-center/user-center.html
+++ b/src/app/home/user-center/user-center.html
@@ -1,15 +1,38 @@
 <div class="user-center-container ui container">
     <div class="ui segment">
         <h4>基本信息</h4>
-        <form class="ui form" novalidate>
+        <form class="ui form" novalidate [formGroup]="basicInfoForm">
             <div class="field">
                 <label>用户名</label>
-                <p>{{user.name}}</p>
+                <p>{{user?.name}}</p>
+            </div>
+            <div class="field">
+                <label>Level</label>
+                 <p>{{user?.level}}</p>
             </div>
             <div class="field">
                 <label>Email</label>
-                <input type="text" placeholder="email">
+                <input type="text" placeholder="email" formControlName="email">
             </div>
+            <button type="button" class="ui button">保存更改</button>
+        </form>
+    </div>
+    <div class="ui segment">
+        <h4>密码</h4>
+        <form class="ui form" novalidate [formGroup]="passwordForm">
+            <div class="field">
+                <label>当前密码</label>
+                <input type="password" formControlName="current_pass">
+            </div>
+            <div class="field">
+                <label>新密码</label>
+                <input type="password" formControlName="new_pass">
+            </div>
+            <div class="field">
+                <label>重复密码</label>
+                <input type="password" formControlName="new_pass_repeat">
+            </div>
+            <button type="button" class="ui button">保存更改</button>
         </form>
     </div>
 </div>
